# VentureOS

./: .env.example  .gitignore  DEPLOY_RENDER.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
demo_data/: lecturetobook_v2.json  zooclaw.json
demo_data/inbound/: curated_01_ai_grant.json  curated_02_eureka_labs.json
demo_data/outbound/: 01_devpost_hiboy_s2_electric_scooter.json  01_flexinference_llm_router.json  01_hn_show_wrumwrum.json  02_codekithub.json  02_devpost_bose_quietcomfort_sc_noise_canceling_hea.json  02_github_trending_grok_build.json  03_devpost_payassist.json  03_devpost_roots_bluetooth__speaker.json  03_thepregamelobby.json  03_voice_chat_in_a_nostalgic_private_lobby.json  04_devpost_meta___quest_3s_128gb.json  04_hn_show_devkram.json  04_lecturetobook.json  05_devpost_ai_safety_hack.json  05_github_trending_colibri.json  05_zlvox.json  06_devpost_snap_cart.json  07_hn_show_akashic.json  08_github_trending_openwiki.json  _summary.json
scripts/: __init__.py  load_demo_20.py  outbound_scan.py  render_cron_outbound.sh  render_start.sh  run_pipeline.py
vc-intelligence/: .env  README.md
vc-intelligence/backend/: seed_one_demo.py  test_crud.py  vc.db
vc-intelligence/frontend/: app.py
ventureos/: __init__.py  cache.py  config.py  graph.py  llm.py  models.py  state.py
ventureos/nodes/: __init__.py  _helpers.py  activation.py  attributes_rollup.py  extraction.py  intake.py  market_research.py  screening.py  sourcing.py  (+1 more)
ventureos_ui/: __init__.py  agent_trace_view.py  app.py  db.py  loader.py  models_orm.py  ui_helpers.py
(+47 files in other folders)
