[project]
name = "ventureos"
version = "0.1.0"
description = "VC Brain — evidence-backed founder scoring and screening pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "tavily-python>=0.5.0",
    "google-search-results>=2.4.2",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "streamlit>=1.39.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ventureos"]